--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.1",
         "laravolt/avatar": "^4.1",
         "livewire/livewire": "^2.10"
     },
